test/testdata/syntax_error/continue_outside_loop.lox
// syntax error: continue statement must be inside a loop
continue;
